--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "48339a2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -1872,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "c4a48d7c",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "c149a3b9",
    "metadata": {},
    "outputs": [
@@ -2271,7 +2272,7 @@
        "[82 rows x 16 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "98bac953",
    "metadata": {},
    "outputs": [
@@ -2323,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "064d83e4",
    "metadata": {},
    "outputs": [
@@ -2689,7 +2690,7 @@
        "[84 rows x 16 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "b76ec397",
    "metadata": {},
    "outputs": [],
@@ -2717,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "a974b022",
    "metadata": {},
    "outputs": [
@@ -3117,7 +3118,7 @@
        "[92 rows x 25 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3128,7 +3129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "83bd1ff0",
    "metadata": {},
    "outputs": [],
@@ -3138,17 +3139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b65b80a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "e56306a8",
    "metadata": {},
    "outputs": [],
@@ -3165,7 +3177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "428e9e3e",
    "metadata": {},
    "outputs": [
@@ -4277,7 +4289,7 @@
        "35  https://swapi.dev/api/starships/75/  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4290,6 +4302,178 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "96e3716a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f39b99cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_power_systems_data_df = pd.read_csv('https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "af1e355d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Consumption</th>\n",
+       "      <th>Wind</th>\n",
+       "      <th>Solar</th>\n",
+       "      <th>Wind+Solar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006-01-01</td>\n",
+       "      <td>1069.18400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2006-01-02</td>\n",
+       "      <td>1380.52100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2006-01-03</td>\n",
+       "      <td>1442.53300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2006-01-04</td>\n",
+       "      <td>1457.21700</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2006-01-05</td>\n",
+       "      <td>1477.13100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4378</th>\n",
+       "      <td>2017-12-27</td>\n",
+       "      <td>1263.94091</td>\n",
+       "      <td>394.507</td>\n",
+       "      <td>16.530</td>\n",
+       "      <td>411.037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>2017-12-28</td>\n",
+       "      <td>1299.86398</td>\n",
+       "      <td>506.424</td>\n",
+       "      <td>14.162</td>\n",
+       "      <td>520.586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4380</th>\n",
+       "      <td>2017-12-29</td>\n",
+       "      <td>1295.08753</td>\n",
+       "      <td>584.277</td>\n",
+       "      <td>29.854</td>\n",
+       "      <td>614.131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2017-12-30</td>\n",
+       "      <td>1215.44897</td>\n",
+       "      <td>721.247</td>\n",
+       "      <td>7.467</td>\n",
+       "      <td>728.714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4382</th>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>1107.11488</td>\n",
+       "      <td>721.176</td>\n",
+       "      <td>19.980</td>\n",
+       "      <td>741.156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4383 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  Consumption     Wind   Solar  Wind+Solar\n",
+       "0     2006-01-01   1069.18400      NaN     NaN         NaN\n",
+       "1     2006-01-02   1380.52100      NaN     NaN         NaN\n",
+       "2     2006-01-03   1442.53300      NaN     NaN         NaN\n",
+       "3     2006-01-04   1457.21700      NaN     NaN         NaN\n",
+       "4     2006-01-05   1477.13100      NaN     NaN         NaN\n",
+       "...          ...          ...      ...     ...         ...\n",
+       "4378  2017-12-27   1263.94091  394.507  16.530     411.037\n",
+       "4379  2017-12-28   1299.86398  506.424  14.162     520.586\n",
+       "4380  2017-12-29   1295.08753  584.277  29.854     614.131\n",
+       "4381  2017-12-30   1215.44897  721.247   7.467     728.714\n",
+       "4382  2017-12-31   1107.11488  721.176  19.980     741.156\n",
+       "\n",
+       "[4383 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open_power_systems_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f3bcb4",
    "metadata": {},
    "outputs": [],
    "source": []
